// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matchesToString "multipe @media" 1`] = `
"@media (max-width: 479px) {

  .pv:bg-red {
    background-color: red;
  }

}

@media print {

  .print:bg-red {
    background-color: red;
  }

}"
`;

exports[`matchesToString "multipe @media" 2`] = `
"@media (max-width: 479px) {

  .pv:bg-red {
    background-color: red;
  }

}

@media print {

  .print:bg-red {
    background-color: red;
  }

}"
`;

exports[`matchesToString "multiple @media and selectors" 1`] = `
"@root {

  .font-semibold {
    font-weight: 600;
  }

}

@media print {

  .print:font-semibold {
    font-weight: 600;
  }

}

@root {

  .font-extrabold {
    font-weight: 800;
  }

}

@media print {

  .print:font-extrabold {
    font-weight: 800;
  }

}"
`;

exports[`matchesToString "multiple @media and selectors" 2`] = `
"@root {

  .font-semibold {
    font-weight: 600;
  }

  .font-extrabold {
    font-weight: 800;
  }

}

@media print {

  .print:font-semibold {
    font-weight: 600;
  }

  .print:font-extrabold {
    font-weight: 800;
  }

}"
`;

exports[`matchesToString "single @media" 1`] = `
"@media (max-width: 479px) {

  .pv:bg-red {
    background-color: red;
  }

}"
`;

exports[`matchesToString "single @media" 2`] = `
"@media (max-width: 479px) {

  .pv:bg-red {
    background-color: red;
  }

}"
`;

exports[`matchesToString "single @root" 1`] = `
"@root {

  .bg-red {
    color: white;
    background-color: red;
  }

}"
`;

exports[`matchesToString "single @root" 2`] = `
"@root {

  .bg-red {
    color: white;
    background-color: red;
  }

}"
`;

exports[`searchCSS "@keyframes & property ends" 1`] = `
"@keyframes pulse {

  0% {
    background-color: #001F3F;
  }

}

@keyframes pulse {

  end {
    background-color: #FF4136;
  }

}"
`;

exports[`searchCSS "@keyframes & property ends" 2`] = `
"@keyframes pulse {

  0% {
    background-color: #001F3F;
  }

}

@keyframes pulse {

  end {
    background-color: #FF4136;
  }

}"
`;

exports[`searchCSS "@keyframes & property ends" 3`] = `
"@keyframes pulse {

  0% {
    background-color: #001F3F;
  }

  end {
    background-color: #FF4136;
  }

}"
`;

exports[`searchCSS "@keyframes & property ends" 4`] = `
"@keyframes pulse {

  0% {
    background-color: #001F3F;
  }

  end {
    background-color: #FF4136;
  }

}"
`;

exports[`searchCSS "@root & property ends" 1`] = `
"@root {

  body {
    color: gray;
  }

}

@root {

  .box {
    color: transparent;
  }

}"
`;

exports[`searchCSS "@root & property ends" 2`] = `
"@root {

  body {
    color: gray;
  }

}

@root {

  .box {
    color: transparent;
  }

}"
`;

exports[`searchCSS "@root & property ends" 3`] = `
"@root {

  body {
    color: gray;
  }

  .box {
    color: transparent;
  }

}"
`;

exports[`searchCSS "@root & property ends" 4`] = `
"@root {

  body {
    color: gray;
  }

  .box {
    color: transparent;
  }

}"
`;

exports[`searchCSS "combined & nested atrules" 1`] = `
"@root {

  body {
    color: gray;
  }

}

@media (min-width: 50em), @supports (flex-wrap: wrap) {

  .a.b .c .d {
    margin: 0px !important;
    border: 1px solid red;
    padding: 10rem;
    color: gray;
  }

}

@root {

  .box {
    color: transparent;
  }

}"
`;

exports[`searchCSS "combined & nested atrules" 2`] = `
"@root {

  body {
    color: gray;
  }

}

@root {

  .box {
    color: transparent;
  }

}"
`;

exports[`searchCSS "combined & nested atrules" 3`] = `
"@root {

  body {
    color: gray;
  }

  .box {
    color: transparent;
  }

}

@media (min-width: 50em), @supports (flex-wrap: wrap) {

  .a.b .c .d {
    margin: 0px !important;
    border: 1px solid red;
    padding: 10rem;
    color: gray;
  }

}"
`;

exports[`searchCSS "combined & nested atrules" 4`] = `
"@root {

  body {
    color: gray;
  }

  .box {
    color: transparent;
  }

}"
`;

exports[`searchCSS "combined atrules" 1`] = `
"@root {

  body {
    color: gray;
  }

}

@keyframes pulse {

  0% {
    background-color: #001F3F;
  }

}

@keyframes pulse {

  end {
    background-color: #FF4136;
  }

}

@root {

  .box {
    color: transparent;
  }

}"
`;

exports[`searchCSS "combined atrules" 2`] = `
"@root {

  body {
    color: gray;
  }

}

@keyframes pulse {

  0% {
    background-color: #001F3F;
  }

}

@keyframes pulse {

  end {
    background-color: #FF4136;
  }

}

@root {

  .box {
    color: transparent;
  }

}"
`;

exports[`searchCSS "combined atrules" 3`] = `
"@root {

  body {
    color: gray;
  }

  .box {
    color: transparent;
  }

}

@keyframes pulse {

  0% {
    background-color: #001F3F;
  }

  end {
    background-color: #FF4136;
  }

}"
`;

exports[`searchCSS "combined atrules" 4`] = `
"@root {

  body {
    color: gray;
  }

  .box {
    color: transparent;
  }

}

@keyframes pulse {

  0% {
    background-color: #001F3F;
  }

  end {
    background-color: #FF4136;
  }

}"
`;

exports[`searchCSS "empty" 1`] = `""`;

exports[`searchCSS "empty" 2`] = `""`;

exports[`searchCSS "empty" 3`] = `""`;

exports[`searchCSS "empty" 4`] = `""`;

exports[`searchCSS "nested atrules & property ends" 1`] = `
"@media (min-width: 50em), @supports (flex-wrap: wrap) {

  .a.b .c .d {
    margin: 0px !important;
    border: 1px solid red;
    padding: 10rem;
    color: gray;
  }

}"
`;

exports[`searchCSS "nested atrules & property ends" 2`] = `
"

}"
`;

exports[`searchCSS "nested atrules & property ends" 3`] = `
"@media (min-width: 50em), @supports (flex-wrap: wrap) {

  .a.b .c .d {
    margin: 0px !important;
    border: 1px solid red;
    padding: 10rem;
    color: gray;
  }

}"
`;

exports[`searchCSS "nested atrules & property ends" 4`] = `
"

}"
`;

exports[`searchCSS "nested atrules" 1`] = `
"@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  0%, 25% {
    background-color: #001F3F;
  }

}

@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  end {
    background-color: #FF4136;
  }

}"
`;

exports[`searchCSS "nested atrules" 2`] = `
"@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  0%, 25% {
    background-color: #001F3F;
  }

}

@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  end {
    background-color: #FF4136;
  }

}"
`;

exports[`searchCSS "nested atrules" 3`] = `
"@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  0%, 25% {
    background-color: #001F3F;
  }

  end {
    background-color: #FF4136;
  }

}"
`;

exports[`searchCSS "nested atrules" 4`] = `
"@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  0%, 25% {
    background-color: #001F3F;
  }

  end {
    background-color: #FF4136;
  }

}"
`;

exports[`searchCSS "property ends" 1`] = `
"@root {

  body {
    color: gray;
  }

}

@keyframes pulse {

  0% {
    background-color: #001F3F;
  }

}

@keyframes pulse {

  end {
    background-color: #FF4136;
  }

}

@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  0%, 25% {
    background-color: #001F3F;
  }

}

@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  end {
    background-color: #FF4136;
  }

}

@media (min-width: 50em), @supports (flex-wrap: wrap) {

  .a.b .c .d {
    margin: 0px !important;
    border: 1px solid red;
    padding: 10rem;
    color: gray;
  }

}

@root {

  .box {
    color: transparent;
  }

}"
`;

exports[`searchCSS "property ends" 2`] = `
"@root {

  body {
    color: gray;
  }

}

@keyframes pulse {

  0% {
    background-color: #001F3F;
  }

}

@keyframes pulse {

  end {
    background-color: #FF4136;
  }

}

@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  0%, 25% {
    background-color: #001F3F;
  }

}

@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  end {
    background-color: #FF4136;
  }

}

@root {

  .box {
    color: transparent;
  }

}"
`;

exports[`searchCSS "property ends" 3`] = `
"@root {

  body {
    color: gray;
  }

  .box {
    color: transparent;
  }

}

@keyframes pulse {

  0% {
    background-color: #001F3F;
  }

  end {
    background-color: #FF4136;
  }

}

@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  0%, 25% {
    background-color: #001F3F;
  }

  end {
    background-color: #FF4136;
  }

}

@media (min-width: 50em), @supports (flex-wrap: wrap) {

  .a.b .c .d {
    margin: 0px !important;
    border: 1px solid red;
    padding: 10rem;
    color: gray;
  }

}"
`;

exports[`searchCSS "property ends" 4`] = `
"@root {

  body {
    color: gray;
  }

  .box {
    color: transparent;
  }

}

@keyframes pulse {

  0% {
    background-color: #001F3F;
  }

  end {
    background-color: #FF4136;
  }

}

@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  0%, 25% {
    background-color: #001F3F;
  }

  end {
    background-color: #FF4136;
  }

}"
`;

exports[`searchCSS "property" 1`] = `
"@root {

  body {
    color: gray;
  }

}

@media (min-width: 50em), @supports (flex-wrap: wrap) {

  .a.b .c .d {
    margin: 0px !important;
    border: 1px solid red;
    padding: 10rem;
    color: gray;
  }

}

@root {

  .box {
    color: transparent;
  }

}"
`;

exports[`searchCSS "property" 2`] = `
"@root {

  body {
    color: gray;
  }

}

@root {

  .box {
    color: transparent;
  }

}"
`;

exports[`searchCSS "property" 3`] = `
"@root {

  body {
    color: gray;
  }

  .box {
    color: transparent;
  }

}

@media (min-width: 50em), @supports (flex-wrap: wrap) {

  .a.b .c .d {
    margin: 0px !important;
    border: 1px solid red;
    padding: 10rem;
    color: gray;
  }

}"
`;

exports[`searchCSS "property" 4`] = `
"@root {

  body {
    color: gray;
  }

  .box {
    color: transparent;
  }

}"
`;

exports[`searchCSS "selector starts" 1`] = `
"@media only screen
and (min-device-width: 320px)
and (max-device-width: 480px)
and (-webkit-min-device-pixel-ratio: 2) {

  .module {
    width: 100%;
  }

}

@supports (display: flex) {

  .module {
    display: flex;
  }

}

@supports (display: flex) and (-webkit-appearance: checkbox) {

  .module {
    display: flex;
  }

}

@supports (display: flex) {

  .module2 {
    display: flex;
    margin: 1in;
  }

}"
`;

exports[`searchCSS "selector starts" 2`] = `
"@media only screen
and (min-device-width: 320px)
and (max-device-width: 480px)
and (-webkit-min-device-pixel-ratio: 2) {

  .module {
    width: 100%;
  }

}

@supports (display: flex) {

  .module {
    display: flex;
  }

}

@supports (display: flex) and (-webkit-appearance: checkbox) {

  .module {
    display: flex;
  }

}"
`;

exports[`searchCSS "selector starts" 3`] = `
"@media only screen
and (min-device-width: 320px)
and (max-device-width: 480px)
and (-webkit-min-device-pixel-ratio: 2) {

  .module {
    width: 100%;
  }

}

@supports (display: flex) {

  .module {
    display: flex;
  }

  .module2 {
    display: flex;
    margin: 1in;
  }

}

@supports (display: flex) and (-webkit-appearance: checkbox) {

  .module {
    display: flex;
  }

}"
`;

exports[`searchCSS "selector starts" 4`] = `
"@media only screen
and (min-device-width: 320px)
and (max-device-width: 480px)
and (-webkit-min-device-pixel-ratio: 2) {

  .module {
    width: 100%;
  }

}

@supports (display: flex) {

  .module {
    display: flex;
  }

}

@supports (display: flex) and (-webkit-appearance: checkbox) {

  .module {
    display: flex;
  }

}"
`;

exports[`searchCSS "selector" 1`] = `
"@media (min-width: 50em), @supports (flex-wrap: wrap) {

  .a.b .c .d {
    margin: 0px !important;
    border: 1px solid red;
    padding: 10rem;
    color: gray;
  }

}"
`;

exports[`searchCSS "selector" 2`] = `
"

}"
`;

exports[`searchCSS "selector" 3`] = `
"@media (min-width: 50em), @supports (flex-wrap: wrap) {

  .a.b .c .d {
    margin: 0px !important;
    border: 1px solid red;
    padding: 10rem;
    color: gray;
  }

}"
`;

exports[`searchCSS "selector" 4`] = `
"

}"
`;

exports[`searchCSS "value regex" 1`] = `
"@root {

  :root {
    --blue: #0074d9;
  }

}

@keyframes pulse {

  0% {
    background-color: #001F3F;
  }

}

@keyframes pulse {

  end {
    background-color: #FF4136;
  }

}

@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  0%, 25% {
    background-color: #001F3F;
  }

}

@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  end {
    background-color: #FF4136;
  }

}"
`;

exports[`searchCSS "value regex" 2`] = `
"@root {

  :root {
    --blue: #0074d9;
  }

}

@keyframes pulse {

  0% {
    background-color: #001F3F;
  }

}

@keyframes pulse {

  end {
    background-color: #FF4136;
  }

}

@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  0%, 25% {
    background-color: #001F3F;
  }

}

@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  end {
    background-color: #FF4136;
  }

}"
`;

exports[`searchCSS "value regex" 3`] = `
"@root {

  :root {
    --blue: #0074d9;
  }

}

@keyframes pulse {

  0% {
    background-color: #001F3F;
  }

  end {
    background-color: #FF4136;
  }

}

@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  0%, 25% {
    background-color: #001F3F;
  }

  end {
    background-color: #FF4136;
  }

}"
`;

exports[`searchCSS "value regex" 4`] = `
"@root {

  :root {
    --blue: #0074d9;
  }

}

@keyframes pulse {

  0% {
    background-color: #001F3F;
  }

  end {
    background-color: #FF4136;
  }

}

@keyframes pulse, @media (min-width: 50em), @supports (flex-wrap: wrap) {

  0%, 25% {
    background-color: #001F3F;
  }

  end {
    background-color: #FF4136;
  }

}"
`;
